all tests passed

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,15 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#IMPORT LIBRARY\n",
+    "import sqlite3\n",
+    "\n",
     "# Create the SQL database and connect to it\n",
+    "connection = sqlite3.connect('planets.db')\n",
+    "cursor = connection.cursor()\n",
     "\n",
-    "# Read in the contents of the create.sql file\n",
+    "# open the file and assign to variable\n",
+    "file = open('create.sql','r')\n",
     "\n",
-    "# Execute that SQL against your database\n"
+    "#read in the file\n",
+    "sql = file.read()\n",
+    "\n",
+    "# Execute that SQL against your database - ie. execute the variable that has read in the data\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "#close the file\n",
+    "file.close()"
    ]
   },
   {
@@ -130,11 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "# Your code for reading and executing alter.sql\n",
+    "\n",
+    "#open the file and assign a variable \n",
+    "file = open('alter.sql','r')\n",
+    "\n",
+    "#read in the file\n",
+    "sql = file.read()\n",
+    "\n",
+    "#execute the alter script\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "#close the file\n",
+    "file.close()"
    ]
   },
   {
@@ -176,11 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from insert.sql and execute it"
+    "# Your code to read in the SQL from insert.sql and execute it\n",
+    "\n",
+    "#open the file and assign to a variable\n",
+    "file = open('insert.sql','r')\n",
+    "\n",
+    "#read in the file\n",
+    "sql = file.read()\n",
+    "\n",
+    "#execute the insert script\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "#close the file\n",
+    "file.close()\n"
    ]
   },
   {
@@ -196,11 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from update.sql and execute it"
+    "# Your code to read in the SQL from update.sql and execute it\n",
+    "\n",
+    "#open the file and assign to a variable\n",
+    "file = open('update.sql', 'r')\n",
+    "\n",
+    "#read in the file\n",
+    "sql = file.read()\n",
+    "\n",
+    "#execute the update script\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "#close the file\n",
+    "file.close()"
    ]
   },
   {
@@ -219,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from delete.sql and execute it"
+    "# Your code to read in the SQL from delete.sql and execute it\n",
+    "\n",
+    "#open the file and assign to a variable\n",
+    "file = open('delete.sql', 'r')\n",
+    "\n",
+    "#read in the file\n",
+    "sql = file.read()\n",
+    "\n",
+    "#execute the delete script\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "#close the file\n",
+    "file.close()"
    ]
   },
   {
@@ -329,9 +390,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -343,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
